--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration) -p src\BlazorServerSidePuppeteerSharp.csproj
+- script: dotnet build src/BlazorServerSidePuppeteerSharp.csproj --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
